--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/Style.css"link>
     <title>Portfolio</title>
 </head>
 <body>
     <header>
             <a href="index.html">
-            <img src="Images/wallpaperflare.com_wallpaper (17).jpg" alt="logo">
+            <img src="https://i.postimg.cc/hvkQF0rD/download-1.jpg" alt="logo">
             </a>
             <nav>
                 <ul class="menu">
                     <li><a href="#home">Home</a></li>|
                     <li><a href="#about">AboutMe</a></li>|
-                    <li><a href="#portfolio">Portfolio</a></li>|
+                    <li><a href="#portfolio">Resume</a></li>|
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -24,14 +24,14 @@
     <main>
         <section id="home">
             <div class="container">
-                <h2>Maxwill Isaacs</h2>
-                <img class="img-profile" src="Images/IMG_20210901_141818_127.webp" alt="Profile Image">
-                <p>Aspired Developer</p>
+                <H1>Reece Simon</H1>
+                <img src="https://i.postimg.cc/KzrZfSqD/IMG-20220808-WA0013.jpg" src="" alt="Profile Image">
+                <p>Aspiring Developer </p>
             </div>
         </section>
         <section id="about">
             <h2>About Me</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia cumque vero, temporibus illo quisquam quidem deleniti fuga nam optio magnam enim tempora repellat aliquid ipsa laboriosam ipsam voluptatem recusandae! Provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quo quos enim harum, nobis incidunt ratione blanditiis ad, nam nostrum officiis sequi corporis, exercitationem eos quam. Voluptates ea delectus a? </p>
+            <p>My name is Reece Simon and I am a aspiring Developer.  </p>
         </section>
             <section id="portfolio">
                 <h2>Portfolio</h2>
@@ -39,27 +39,13 @@
             </section>
             <section id="contact">
                 <h2>Contact</h2>
-                <form action="#">
-                    <div>
-                        <label for="#firstname">Name</label method="POST">
-                        <input id="firstname" name="firstname" type="text" placeholder="Enter Your Name" required>
-                    </div>
-                    <div>
-                        <label for="#firstname">Surname</label>
-                        <input id="surname" name="surname" type="text" placeholder="Enter Your Surname" required>
-                    </div>
-                    <div>
-                        <label for="#firstname">Message</label>
-                        <textarea name="message" id="" cols="30" rows="10 " placeholder="Enter Message"></textarea>
-                    </div>
-                    <div>
-                        <input type="submit" value="submit">
-                    </div>
-                </form>
+                <H3>Email Address: reecesimon84@gmail.com </H3>
+                <H3>Phone No. 0677432579 / 0812302562 </H3>
             </section>
+
     </main>
     <footer>
-        <p>Maxwill Copyright &copy;2022</p>
+        <p>Reece Copyright &copy;2022</p>
     </footer>
 </body>
 </html>
